[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cashtube"
version = "0.1.0"
description = "YouTube legacy-domain discovery pipeline"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "yt-dlp>=2024.03.10",
  "python-dotenv>=1.0.1",
  "tldextract>=5.1.2",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "black>=24.4.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
]

[project.scripts]
cashtube = "cashtube.cli:main"
cashtube-wizard = "cashtube.wizard:run"

[tool.setuptools]
py-modules = [
  "cashtube_pipeline",
  "cashtube_utils",
  "digital_asset_ghost_hunter",
  "phase1_smart_discovery",
  "phase2_dead_link_detection",
  "trademarked",
]
packages = ["cashtube"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
